--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,16 @@
 language: cpp
 
 script:   
-- cmake -H. -B_build
-- cmake --build _build
 - cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install
 - cmake --build _build --target install
-- mkdir artifacts && cd artifacts
+- cd artifacts
 - echo "text1 text2 text3" | ../_install/bin/demo
-- test -f default.log
-- mkdir /Users/COCTAB/.config
-- echo "output=config.log" > /Users/COCTAB/.config/demo.cfg
+- test -f default.log 
+- mkdir .config
+- echo "output=config.log" > .config/demo.cfg
 - echo "text1 text2 text3" | ../_install/bin/demo
-- test -f config.log
 - export DEMO_OUTPUT=env.log
 - echo "text1 text2 text3" | ../_install/bin/demo
-- test -f env.log
+- test -f env.log 
 - echo "text1 text2 text3" | ../_install/bin/demo --output arg.log
-- test -f arg.log
+- test -f arg.log 
